[metadata]
description-file = README.md
license_file = LICENSE

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[pycodestyle]
max-line-length = 120
statistics = True
show-pep8 = True
show-source = True
ignore = W391, W605, W503

[pep8]
max-line-length=120
show-pep8 = true
statistics = true
ignore = W391, W503

[flake8]
max-line-length = 120
ignore = E203, E402, W503, W391
exclude = venv
extend-select = B901, C401, C408, C409
